# minimal_doctest_fail

./: Cargo.toml  readme.md
src/: lib.rs
